# picasso

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.txt  changelog.md  changelog.rst  create_shortcuts.ps1  localize.py  picasso_setup.bat  plugin_framework.py  plugin_template.py  pyproject.toml  readme.rst  render.py  requirements.txt  setup.py  toraw.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: main.yml  pypi_release.yml  pypi_test.yml
convert/: matlab_2d.m
distribution/: README.md  create_installer.bat  create_installer.iss  create_linux_shortcuts.py  picasso-script.py  picasso.iss  test_installer.bat
distribution/pypi/: install_pypi_wheel.sh  install_test_pypi_wheel.sh  prepare_pypi_wheel.sh
docs/: __version__.py  average.rst  cmd.rst  conf.py  design.rst  faq.rst  files.rst  filter.rst  index.rst  localize.rst  nanotron.rst  others.rst  plugins.rst  postprocessing.rst  render.rst  requirements.txt  server.rst  simulate.rst  spinna.rst  table01.csv  table02.csv
gui/: filter.pyw  localize.py  localize.pyw  render.pyw  toraw.pyw
lib/: io.py
picasso/: __init__.py  __main__.py  __version__.py  aim.py  average.py  avgroi.py  base_sequences.csv  cfill_gaussian.pyx  clusterer.py  comet.py  config.yaml  config_template.yaml  design.py  design_sequences.py  g5m.py  gausslq.py  gaussmle.py  imageprocess.py  io.py  io2.py  leastsq.py  lib.py  localize.py  masking.py  nanotron.py  paint_sequences.csv  postprocess.py  render.py  simulate.py  spatial_index.py  spinna.py  toraw.py  updater.py  version.py  widgets.py  zfit.py
picasso/ext/: bitplane.py  comet.py
picasso/ext/pygpufit/: LICENSE.txt  gpufit.py  version.py
picasso/gui/: average.py  average3.py  createShortcuts.ps1  design.py  dme_example.py  dme_example_2D.py  filter.py  localize.py  nanotron.py  plugins_loader.py  render.py  render.pyw  rotation.py  simulate.py  spinna.py  toraw.py  toraw.pyw  widgets.py
picasso/gui/dme/: DriftEstimation.sln  dme.py  drift_rcc_original.npy  fit_gauss_2D.py  native_api.py  rcc.py
picasso/gui/dme/DME/: ContainerUtils.h  CudaUtils.h  DLLMacros.h  DME-CUDA.vcxproj  DriftEstimation.cu  KDTree.h  KahanSum.h  Rendering.cpp  Rendering.h  StringUtils.cpp  StringUtils.h  ThreadUtils.h  Vector.h  palala.h
picasso/gui/dme/DME-CPU/: DME-CPU.vcxproj  DME-CPU.vcxproj.filters
picasso/gui/plugins/: FRET_plugin.py
picasso/lib/: localize.py
picasso/model/: default_model.yaml
picasso/server/: app.py  check.py  compare.py  helper.py  history.py  preview.py  status.py  watcher.py
picasso/shortcuts/: localize.pyw
release/: create_linux_shortcuts.py  sync_installer_readmes.py
release/logos/: average.icns  design.icns  filter.icns  localize.icns  nanotron.icns  render.icns  server.icns  simulate.icns  spinna.icns  toraw.icns
release/one_click_macos_gui/: create_macos_dmg.sh  readme.rst  readme.txt
release/one_click_windows_gui/: create_installer_windows.bat  create_installer_windows.sh  create_macos_dmg.sh  picasso_innoinstaller.iss  readme.rst  readme.txt
release/pyinstaller/: picasso.spec  picasso_pyinstaller.py  picassow.spec
release/pypi/: install_pypi_wheel.sh  install_test_pypi_wheel.sh  prepare_pypi_wheel.sh
samples/: SampleNotebook.ipynb  SampleNotebook2.ipynb  SampleNotebook3.ipynb  SampleNotebook4.ipynb  egfr_mols.yaml  sample_notebook_1_localize.ipynb  sample_notebook_2_basic_analysis.ipynb  sample_notebook_3_clustering.ipynb  sample_notebook_4_spinna.ipynb
samples/data/: egfr_mols.hdf5  raw_movie.yaml  raw_movie_locs.hdf5  raw_movie_locs.yaml  raw_movie_locs_picked.hdf5  raw_movie_locs_picked.yaml  raw_movie_locs_picked_single.hdf5  raw_movie_locs_picked_single.yaml  testdata_locs.yaml  testdata_locs_picked_single.hdf5  testdata_locs_picked_single.yaml
scripts/: picasso.bat  picasso.py
shortcuts/: localize.bat
tests/: cmd_test.py  conftest.py  test_average.py  test_clusterer.py  test_comet.py  test_gausslq.py  test_gaussmle.py  test_imageprocess.py  test_io.py  test_lib.py  test_localize.py  test_plugins_loader.py  test_postprocess.py  test_render.py  test_simulate.py  test_spatial_index.py  test_spinna.py  test_undrift.py  test_zfit.py
tests/data/: testdata.raw  testdata.yaml  testdata_locs.hdf5  testdata_locs.yaml  testdata_locs_picked.hdf5  testdata_locs_picked.yaml  testdata_mask_spinna.npy  testdata_mask_spinna.yaml  testdata_mols.yaml
